<resources>
    <string name="app_name">WIP-Bank</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Einstellungen</string>

    // Wird als Key in den Shared Preferences eingesetzt
    <string name="pref_accountNumber_key">accountnumber</string>
    <string name="pref_backup_account_key">backup_account</string>
    <string name="pref_server_ip_key">server_ip</string>

    <string name="btnSave">Speichern</string>
    <string name="edtAccountNumber_hint">Account-Number</string>
    <string name="textInfo_content">Willkommen bei der WIP-Bank! Bitte geben Sie ihre Account-Number und die Server-IP (optional mit Port) ein!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_refresh">Refresh</string>
    <string name="nav_transactions">Transaktionen</string>
    <string name="nav_new_transaction">Neue Transaktion</string>
    <string name="nav_settings">Einstellungen</string>
    <string name="nav_about">Über uns</string>
    <string name="nav_header_text1">WIP-Bank</string>
    <string name="nav_header_text2"><![CDATA[By Alexander, Daniel, Jannis & Philipp]]></string>
    <string name="txtNewTransaction_content">Bitte den Empfänger, den Betrag und eine Referenz angeben.</string>
    <string name="edtAmount_hint">0.00</string>
    <string name="edtReference_hint">Referenz</string>
    <string name="btnExecute">Überweisen</string>
    <string name="title_activity_settings">Einstellungen</string>
    <string name="default_ip">localhost</string>
    <string name="edtServerIP_hint">Server-IP</string>
    <string name="textReceiverLabel">Empfänger</string>
    <string name="textSenderLabel">Sender</string>
    <string name="textAmountLabel">Betrag</string>
    <string name="textReferenceLabel">Referenz</string>
    <string name="textTransactionDateLabel">Transaktionsdatum</string>
    <string name="textBalanceLabel">Saldo</string>
    <string name="title_activity_transaction_detail">Transaktionsdetails</string>
    <string name="textAboutUs"><![CDATA[By Alexander, Daniel, Jannis & Philipp]]></string>
    <string name="title_activity_about_us">Über uns</string>
    <string name="transaction_successful">Transaktion erfolgreich</string>


</resources>
