<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.fhdw.wipbank.android.activity.OnFirstStartActivity">

    <TextView
        android:id="@+id/txtInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/textInfo_content" />

    <EditText
        android:id="@+id/edtAccountNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/edtAccountNumber_hint"
        android:inputType="number"
        android:maxLength="4"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/edtServerIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/edtServerIP_hint"
        android:inputType="text"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"

            android:onClick="btnSaveOnClick"
            android:text="@string/btnSave" />
    </LinearLayout>

</LinearLayout>