<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/activity_horizontal_margin_normal"
    android:layout_marginEnd="@dimen/activity_horizontal_margin_normal"
    tools:context="de.fhdw.wipbank.android.activity.TransactionDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:weightSum="5">

        <TextView
            android:id="@+id/textSenderLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/textSenderLabel"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textSender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="3"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="Max Mustermann"
            android:textAlignment="textEnd"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:weightSum="5">

        <TextView
            android:id="@+id/textReceiverLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/textReceiverLabel"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textReceiver"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="3"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="Max Mustermann"
            android:textAlignment="textEnd"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:weightSum="5">

        <TextView
            android:id="@+id/textAmountLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/textAmountLabel"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="3"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="1.000.000,00"
            android:textAlignment="textEnd"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:weightSum="5">

        <TextView
            android:id="@+id/textReferenceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/textReferenceLabel"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textReference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ellipsize="end"
            android:text="Testtransaktion"
            android:textAlignment="textEnd"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:weightSum="5">

        <TextView
            android:id="@+id/textTransactionDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/textTransactionDateLabel"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textTransactionDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ellipsize="end"
            android:text="01. Januar 1900 12:34:56 MESZ"
            android:textAlignment="textEnd"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>


</LinearLayout>
